[gd_scene load_steps=3 format=3 uid="uid://bsjhk3bsxa73u"]

[ext_resource type="Script" path="res://Code/pause_menu.gd" id="1_nttqx"]
[ext_resource type="FontFile" uid="uid://b5wr2pvb464e8" path="res://Fonts/Handlee-Regular.ttf" id="1_u3oc8"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_nttqx")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.466667)
offset_right = 1280.0
offset_bottom = 736.0

[node name="Unpause" type="Button" parent="."]
offset_left = 544.0
offset_top = 128.0
offset_right = 736.0
offset_bottom = 224.0
theme_override_fonts/font = ExtResource("1_u3oc8")
theme_override_font_sizes/font_size = 32
text = "Unpause"

[node name="ControlsText" type="RichTextLabel" parent="."]
offset_left = 384.0
offset_top = 384.0
offset_right = 896.0
offset_bottom = 483.0
theme_override_fonts/normal_font = ExtResource("1_u3oc8")
theme_override_fonts/bold_font = ExtResource("1_u3oc8")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[u]A/left arrow[/u]: move left             [u]Enter[/u]: pause/unpause
[u]D/right arrow[/u]: move right        [u]R[/u]: restart level
[u]W/spacebar/up arrow[/u]: jump"
fit_content = true
autowrap_mode = 0

[node name="MusicLabel" type="Label" parent="."]
offset_left = 556.0
offset_top = 298.0
offset_right = 632.0
offset_bottom = 341.0
theme_override_fonts/font = ExtResource("1_u3oc8")
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="MusicSwitch" type="CheckButton" parent="."]
offset_left = 634.0
offset_top = 288.0
offset_right = 678.0
offset_bottom = 312.0
scale = Vector2(2.4, 2.4)
button_pressed = true

[node name="QuitToTitle" type="Button" parent="."]
offset_left = 352.0
offset_top = 544.0
offset_right = 608.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("1_u3oc8")
theme_override_font_sizes/font_size = 32
text = "Quit to title screen"

[node name="QuitAndClose" type="Button" parent="."]
offset_left = 672.0
offset_top = 544.0
offset_right = 928.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("1_u3oc8")
theme_override_font_sizes/font_size = 32
text = "Quit and close"

[connection signal="pressed" from="Unpause" to="." method="_on_unpause_pressed"]
[connection signal="toggled" from="MusicSwitch" to="." method="_on_music_switch_toggled"]
[connection signal="pressed" from="QuitToTitle" to="." method="_on_quit_to_title_pressed"]
[connection signal="pressed" from="QuitAndClose" to="." method="_on_quit_and_close_pressed"]
